# zisk

./: Cargo.toml  ZisK_DeepWiki.md
.github/workflows/: no_std_check.yml  pr.yml  test_install_bin.yml
book/getting_started/: hints_stream.md  installation.md  precompile_hints.md  proof.md  quickstart.md  quickstart_dev.md  writing_programs.md
cli/: Cargo.toml
cli/src/: lib.rs
common/: Cargo.toml
common/src/: hints.rs  types.rs  zisk_lib_init.rs
core/: Cargo.toml
core/src/: direct_calls.rs  elf2rom.rs  elf_extraction.rs  helpers.rs  inst_context.rs  mem.rs  riscv2zisk_context.rs  utils.rs  zisk_inst.rs  zisk_inst_builder.rs  zisk_ops.rs  zisk_registers.rs  zisk_rom_2_asm.rs
core/tests/: compressed_test.rs
definitions/src/: lib.rs
elf-regressions/compressed/: mixed_arithmetic.ld  mixed_stack_ops.ld
emulator/: Cargo.toml
emulator-asm/: Makefile
emulator-asm/asm-runner/: Cargo.toml
emulator-asm/src/: c_provided.c  client.c  configuration.c  emu.c  globals.c  globals.hpp  log.c  main.c  server.c  trace.c  trace_logs.c
emulator/src/: disasm.rs  elf_symbol_reader.rs  emu.rs  emu_context.rs  emu_options.rs  emulator.rs  lib.rs  regions_of_interest.rs  stats.rs
examples/: Cargo.toml
examples/sha-hasher/guest/: Cargo.toml
examples/sha-hasher/guest/src/: main.rs
executor/: Cargo.toml
executor/src/: asm_resources.rs  emu_asm.rs  emu_asm_stub.rs  emu_rust.rs  executor.rs  hints_pipeline.rs  hints_shmem.rs  lib.rs  sm_static_bundle.rs  static_data_bus.rs  static_data_bus_collect.rs  utils.rs
hints/: Cargo.toml
hints/src/: hints.rs  hints_definitions.rs  hints_pipeline.rs  hints_processor.rs  hints_stream.rs  lib.rs
lib-c/: build.rs
lib-c/c/: Makefile
pil/: Cargo.toml  operations.pil  opids.pil  zisk.pil
precompiles/common/: Cargo.toml
precompiles/dma/: Cargo.toml
riscv/src/: riscv_inst.rs  riscv_interpreter.rs
riscv_fuzz/: Cargo.toml
riscv_fuzz/src/: lib.rs
riscv_fuzz/src/decoder/: compressed.rs  mod.rs  standard.rs  utils.rs
riscv_fuzz/src/instruction/: formats.rs  mod.rs  opcodes.rs
riscv_fuzz/src/interpreter/: mod.rs
riscv_new/: Cargo.toml
riscv_new/src/: compressed_decoder.rs  lib.rs  standard_decoder.rs  target.rs
riscv_new/src/compressed_decoder/: error.rs  instruction.rs
riscv_new/src/standard_decoder/: error.rs  instruction.rs  opcode.rs
riscv_new/tests/: compressed_test.rs  standard_test.rs
rom-setup/src/: asm_setup.rs  rom_full_setup.rs  rom_vkey.rs
sdk/: Cargo.toml
verifier/: Cargo.toml
witness-computation/: Cargo.toml
ziskos-hints/: Cargo.toml
ziskos/entrypoint/: Cargo.toml  build.rs  zisk.ld
ziskos/entrypoint/src/: fcall.rs  hints_collect.rs  io.rs  lib.rs  memcpy_test.rs  profile.rs
ziskos/entrypoint/src/dma/: memcmp.s  memcpy.s  memmove.s
ziskos/entrypoint/src/hints/: bls12_381.rs  bn254.rs  custom.rs  hint_buffer.rs  input_data.rs  macros.rs  metrics.rs  mod.rs  secp256k1.rs
ziskos/entrypoint/src/syscalls/: add256.rs  arith256.rs  arith256_mod.rs  arith384_mod.rs  blake2br.rs  bls12_381_complex_add.rs  bls12_381_complex_mul.rs  bls12_381_complex_sub.rs  bls12_381_curve_add.rs  bls12_381_curve_dbl.rs  bn254_complex_add.rs  bn254_complex_mul.rs  bn254_complex_sub.rs  bn254_curve_add.rs  bn254_curve_dbl.rs  keccakf.rs  mod.rs  poseidon2.rs  secp256k1_add.rs  secp256k1_dbl.rs  secp256r1_add.rs  secp256r1_dbl.rs  sha256f.rs
ziskos/entrypoint/src/zisklib/: mod.rs
ziskos/entrypoint/src/zisklib/fcalls/: big_int256_div.rs  big_int_div.rs  bin_decomp.rs  bls12_381_fp2_inv.rs  bls12_381_fp2_sqrt.rs  bls12_381_fp_inv.rs  bls12_381_fp_sqrt.rs  bls12_381_twist.rs  bn254_fp.rs  bn254_fp2.rs  bn254_twist.rs  mod.rs  msb_pos_256.rs  msb_pos_384.rs  secp256k1_fn_inv.rs  secp256k1_fp_inv.rs  secp256k1_fp_sqrt.rs
ziskos/entrypoint/src/zisklib/fcalls/bls12_381/: fp.rs  fp2.rs  twist.rs
ziskos/entrypoint/src/zisklib/fcalls/bn254/: fp.rs  fp2.rs  twist.rs
ziskos/entrypoint/src/zisklib/fcalls/secp256k1/: ecdsa.rs  fn.rs  fp.rs  mod.rs
ziskos/entrypoint/src/zisklib/fcalls/secp256r1/: ecdsa.rs
ziskos/entrypoint/src/zisklib/fcalls_impl/: big_int_div.rs  bls12_381_fp2_sqrt.rs  bls12_381_fp_sqrt.rs  bls12_381_twist.rs  bn254_twist.rs  mod.rs  msb_pos_256.rs  proxy.rs  secp256k1_fp_sqrt.rs
ziskos/entrypoint/src/zisklib/fcalls_impl/bls12_381/: constants.rs  fp2_inv.rs  fp2_sqrt.rs  fp_inv.rs  fp_sqrt.rs
ziskos/entrypoint/src/zisklib/fcalls_impl/bn254/: constants.rs  fp.rs  fp2.rs
ziskos/entrypoint/src/zisklib/fcalls_impl/secp256k1/: constants.rs  ecdsa.rs  fn_inv.rs  fp_inv.rs  fp_sqrt.rs  mod.rs
ziskos/entrypoint/src/zisklib/fcalls_impl/secp256r1/: constants.rs
ziskos/entrypoint/src/zisklib/lib/: arith256.rs  bigint256.rs  blake2b.rs  evm_u256.rs  keccak256.rs  mod.rs  ripemd160.rs  sha256.rs  zkvm_accelerators.rs
ziskos/entrypoint/src/zisklib/lib/array_lib/: add_agtb.rs  add_short.rs  common.rs  div_long.rs  div_short.rs  mod.rs  modexp.rs  mul.rs  mul_long.rs  mul_short.rs  rem_long.rs  rem_short.rs  square.rs  square_long.rs  square_short.rs
ziskos/entrypoint/src/zisklib/lib/bls12_381/: curve.rs  cyclotomic.rs  final_exp.rs  fp.rs  fp2.rs  fp6.rs  fr.rs  kzg.rs  map_to_curve.rs  miller_loop.rs  pairing.rs  twist.rs
ziskos/entrypoint/src/zisklib/lib/bn254/: curve.rs  final_exp.rs  fp.rs  fp12.rs  fp6.rs  fr.rs  miller_loop.rs  pairing.rs  twist.rs
ziskos/entrypoint/src/zisklib/lib/secp256k1/: curve.rs  ecdsa.rs  ecrecover.rs  field.rs  scalar.rs  schnorr.rs
ziskos/entrypoint/src/zisklib/lib/secp256r1/: curve.rs  ecdsa.rs  field.rs
ziskup/: ziskup
(+164 files in other folders)
