[package]
name = "riscv_new"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
description = "Modern RISC-V instruction enum with actual instruction variants"

[lib]
name = "riscv_new"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"