[package]
name = "ziskos"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
links = "ziskos"

[features]
default = ["user-hints", "host-deps"]
host-deps = [
    "dep:precompiles-helpers",
    "dep:lib-c", "dep:num-bigint", "dep:num-integer", "dep:num-traits",
    "dep:lazy_static",
    "dep:tiny-keccak", "dep:sha2", "dep:fields",
]
user-hints = ["dep:zisk-common", "dep:bytes", "dep:paste", "dep:once_cell", "dep:ctor", "dep:anyhow", "dep:tokio"]

[dependencies]
cfg-if = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
precompiles-helpers = { workspace = true, optional = true }

# Host-only dependencies (software implementations of fcalls, used by emulator)
lib-c = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
lazy_static = { version = "1.5.0", optional = true }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
tiny-keccak = { version = "2.0.0", features = ["keccak"], optional = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
sha2 = { workspace = true, optional = true }
fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0", features = [
    "verify",
], optional = true }

# Hints deps (optional, gated by user-hints feature)
zisk-common = { path = "../../common", optional = true }
bytes = { version = "1.11.0", optional = true }
once_cell = { version = "1.21.3", optional = true }
paste = { version = "1.0", optional = true }
anyhow = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Metrics dep (optional)
ctor = { version = "0.2", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
'cfg(zisk_hints)',
'cfg(zisk_hints_metrics)',
'cfg(zisk_hints_debug)',
'cfg(zisk_hints_single_thread)'] }
