[package]
name = "sha-hasher-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ziskos = { path = "../../../ziskos/entrypoint" }
